# nexora

./: .gitignore  ARCHITECTURE_ASSESSMENT.md  ARCIUM_CHECKLIST.md  ARCIUM_IMPLEMENTATION_SUMMARY.md  ARCIUM_INTEGRATION.md  ARCIUM_INTEGRATION_SPEC.md  ARCIUM_MIGRATION_GUIDE.md  ARCIUM_QUICK_REFERENCE.md  ARCIUM_SDK_IMPLEMENTATION.md  ARCIUM_SDK_SETUP.md  Anchor.toml  BUILD_COMPLETE.txt  COMPLETION_REPORT.md  Cargo.toml  DELIVERY_SUMMARY.md  HONEST_VERIFICATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_DEPLOYMENT.md  TESTING_CHECKLIST.md  TRUST_MINIMIZED_IMPLEMENTATION.md  deploy-guide.txt  index.html  package.json  tsconfig.json
app/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/scripts/: check-arcium-setup.ts  setup-arcium.sh
app/src/: App.tsx  index.css
app/src/components/: CreateMarketModal.tsx  CreatePage.tsx  Dashboard.tsx  HomePage.tsx  MarketCard.tsx  MarketsPage.tsx  Navbar.tsx  PlaceBetModal.tsx
app/src/contexts/: NexoraContext.tsx
app/src/idl/: nexora.json
app/src/lib/: arcium-mock.ts  arcium-sdk-client.ts  claim-with-proof.ts  nexora-arcium.ts
app/src/services/: ArciumService.ts
backend/: mxe-service.ts  package-lock.json  package.json  tsconfig.json
circuits/: nexora_circuits.arcis
programs/nexora/: Cargo.toml
programs/nexora/src/: lib.rs
programs/nexora/tests/: security_attacks.test.ts
scripts/: setup-devnet.sh  test.sh
tests/: nexora.ts
