[package]
name = "nexora"
version = "0.1.0"
description = "Private prediction market protocol on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nexora"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
